; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/esp/extr_stub_flasher.c_do_flash_read_chip_id.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/esp/extr_stub_flasher.c_do_flash_read_chip_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPI_FLASH_RDID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_flash_read_chip_id() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 @SPI_CMD_REG(i32 0)
  %3 = load i32, i32* @SPI_FLASH_RDID, align 4
  %4 = call i32 @WRITE_PERI_REG(i32 %2, i32 %3)
  br label %5

5:                                                ; preds = %11, %0
  %6 = call i32 @SPI_CMD_REG(i32 0)
  %7 = call i32 @READ_PERI_REG(i32 %6)
  %8 = load i32, i32* @SPI_FLASH_RDID, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %5
  br label %5

12:                                               ; preds = %5
  %13 = call i32 @SPI_W0_REG(i32 0)
  %14 = call i32 @READ_PERI_REG(i32 %13)
  %15 = and i32 %14, 16777215
  store i32 %15, i32* %1, align 4
  %16 = call i32 @send_packet(i32* %1, i32 4)
  ret i32 0
}

declare dso_local i32 @WRITE_PERI_REG(i32, i32) #1

declare dso_local i32 @SPI_CMD_REG(i32) #1

declare dso_local i32 @READ_PERI_REG(i32) #1

declare dso_local i32 @SPI_W0_REG(i32) #1

declare dso_local i32 @send_packet(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
